--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GTA BUT THE CAR GETS FASTER EVERY LAP</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Pretty Good Oscillator (PGO) by Mark Johnson</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -796,7 +796,7 @@
                     <div class="video-info">
                         <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1007,7 +1007,7 @@
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Wheat Dueling Momentum 🌾🏆 |  Strategy of the Month #50! | December 2025</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>I am Trading for 10 Years and this is what I would tell every struggeling Trader</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Pretty Good Oscillator (PGO) by Mark Johnson</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6011,7 +6011,7 @@
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session
 (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Does Early Sexual Intimacy Affect You? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8129,7 +8129,7 @@
                         <div class="video-info">
                             <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Try Not to Laugh: Pranks that are Actually Good 4</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GTA BUT THE CAR GETS FASTER EVERY LAP</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Tour has begun WHO IS EXCITED?? #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Nearly got pantsd(sum) for she’s so handsome. Not my best #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
